# misc

./: .clang-tidy  .clangd  .gitignore  README.md
bgw/: ang2bohr.sh  pw2kgrid.py  sortxct.py
bmod/: README.md  init.sh
devtools/: makedeps.sh
fit/: exp_fit.py  postdoc.py
fortlint/: __init__.py  core.py  find_nodes.py  find_rel.py  find_sym.py  graph.py  make_cache.py  make_call_graph.py  make_dep.py  make_depend.py  make_depend_graph.py  make_graph.py  rules.py
inpgen/: inpgen.py
linux/: TODO  backup.sh  bashrc_suse  ecp.sh  get_old_oneapi.py  modman.sh  print_banner.py  rm_old_oneapi.sh
m4tools/: m4tools.py  run_m4.py  scf.in
mace/: defs.m4  defs.py  kpt.inc  m4tools.py  mace.py  matrix.i  run_m4.py  run_mace.py  scalar.i  scf.m4  scf.tpl  test.out
nebtools/: plot_mep.py  plot_mep_curve.py  plot_mep_line.py
octave/: dircos.m  eos.m  gaussian.m  genkpath.m  lorentzian.m  printmat.m  projbands.m  recip.m  uniformk.m
pce/: main.m  pce.m
pmod/: README.md  init.sh  modcmd.py  modconfig.py
psi/: CMakeLists.txt  Makefile  rad.c  rad.inp  rnl.h  ylm.c  ylm.h
qe/: bm.py  sumpdos.py
qwell/: Hamiltonian.tm  plot_eb1.m  plot_eb1.py  plot_eb2.m  plot_eb2.py  plot_fit.py  plot_radius1.m  plot_radius1.py  plot_radius2.m  plot_radius2.py  qw2_loop.py  qw2_mpi.py  qw2_opt.py  qw_mpi.py  qw_serial.py
shell/: backup.sh  ecp.sh  fmt.sh
speedtest/: CMakeLists.txt  Makefile  diag.cpp  diag.h  model.cpp  model.h  speedtest.cpp  tbpm.cpp  tbpm.h
tbmod/: core.pyx  dumphr.py  filthr.py  hamiltonian.py  hopterm.py  inp.py  kpoints.py  lattice.py  main.py  (+3 more)
(+536 files in other folders)
