cmake_minimum_required(VERSION 3.17)
set(TARGET_SAMPLE "speedtest")
set(TBPLAS_PROJ_DIR "/home/yhli/proj/tbplas-cpp")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_FLAGS "-O3 -fopenmp -DWITH_FULL_CSR")

project(${TARGET_SAMPLE} C CXX)
include_directories(${TBPLAS_PROJ_DIR}/sources)
include_directories(${TBPLAS_PROJ_DIR}/3rdparty)
set(BUILD_SRC model.cpp diag.cpp tbpm.cpp speedtest.cpp)
add_executable(${TARGET_SAMPLE} ${BUILD_SRC})

if(WIN32)
  target_link_libraries(${TARGET_SAMPLE} PUBLIC shlwapi)
elseif(UNIX)
  target_link_libraries(${TARGET_SAMPLE} PUBLIC pthread)
endif()
target_link_directories(${TARGET_SAMPLE} PUBLIC ${TBPLAS_PROJ_DIR}/build/out)
target_link_libraries(${TARGET_SAMPLE} PUBLIC tbpm diag builder base gomp)
